# nau7802_loadcell_zephyr_driver

./: CMakeLists.txt  Readme.md
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/nau7802_loadcell/: CMakeLists.txt  Kconfig  nau7802_loadcell.c  nau7802_loadcell.h  nau7802_loadcell_trigger.c
dts/bindings/sensor/nau7802_loadcell/: nuvoton,nau7802_loadcell.yaml
zephyr/: module.yaml
